--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -10,3 +10,7 @@ github:
   token: ${GITHUB_API_TOKEN}
 application:
   import-frequency: ${ISSUES_IMPORT_FREQUENCY:60000}
+  challenge-frequency: ${ISSUES_CHALLENGE_FREQUENCY:10000}
+  one-signal:
+    api-auth-key: ${ONE_SIGNAL_API_AUTH_KEY}
+    new-challenge-template-id: "2316b607-fb66-40be-bb20-780048c0e934"
