--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -14,3 +14,4 @@ application:
   one-signal:
     api-auth-key: ${ONE_SIGNAL_API_AUTH_KEY}
     new-challenge-template-id: "2316b607-fb66-40be-bb20-780048c0e934"
+    app-id: ${APP_ID}
