--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -13,22 +13,24 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'mysql:mysql-connector-java'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	compileOnly 'org.projectlombok:lombok:1.18.24'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.eclipse.mylyn.github:org.eclipse.egit.github.core:2.1.5'
   implementation 'com.currencyfair:onesignal:1.0.15'
-	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+  runtimeOnly 'mysql:mysql-connector-java'
+  compileOnly 'org.projectlombok:lombok:1.18.20'
+  annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
-	testCompileOnly 'org.projectlombok:lombok:1.18.24'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-	testImplementation 'com.h2database:h2:1.3.148'
-	testImplementation 'org.testcontainers:testcontainers:1.17.3'
-	testImplementation "org.testcontainers:mysql:1.15.3"
-	testImplementation "org.testcontainers:junit-jupiter:1.15.3"
-	testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock:3.0.3'
-	testImplementation "de.mkammerer.wiremock-junit5:wiremock-junit5:1.1.0"
+
+  testCompileOnly 'org.projectlombok:lombok:1.18.20'
+  testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testImplementation 'com.h2database:h2:1.4.200'
+  testImplementation "org.testcontainers:testcontainers:1.15.3"
+  testImplementation "org.testcontainers:junit-jupiter:1.15.3"
+  testImplementation "org.testcontainers:mysql:1.15.3"
+  testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock:3.0.3'
+  testImplementation 'de.mkammerer.wiremock-junit5:wiremock-junit5:1.1.0'
 }
 
 tasks.named('test') {
